--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,12 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "reset-db": [
+            "php bin/console doctrine:database:drop --force",
+            "php bin/console doctrine:database:create",
+            "php bin/console doctrine:migrations:migrate --no-interaction",
+            "php bin/console hautelook:fixtures:load --no-interaction"
         ]
     },
     "conflict": {
